--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://github.com/Fengzdadi/Fengzdadi.github.io/'
+baseURL = "https://fengzdadi.github.io/"
 languageCode = 'en-us'
 title = "Fengze's Blog"
 theme = "hugo-theme-stack"
